--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,7 +33,7 @@
      <string>Read image</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_cam_L">
+   <widget class="QLabel" name="label_cam_img_L">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -65,7 +65,7 @@
      <string>CLOSE</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_cam_R">
+   <widget class="QLabel" name="label_cam_img_R">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -199,6 +199,9 @@
     <property name="text">
      <string>Do depth</string>
     </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QLabel" name="label_color_table">
     <property name="geometry">
@@ -213,17 +216,170 @@
      <string>ColorTable</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_disp_2">
+   <widget class="QCheckBox" name="checkBox_do_calibration">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>550</y>
-      <width>501</width>
-      <height>391</height>
+      <x>20</x>
+      <y>510</y>
+      <width>94</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Disparity</string>
+     <string>Do calibration</string>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>542</y>
+      <width>69</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Focal length</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>615</y>
+      <width>67</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Base line (cm)</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_base_line">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>641</y>
+      <width>67</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_camera_focal_length">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>580</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_43">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>681</y>
+      <width>66</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Rig height</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_sv_rig_height">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>710</y>
+      <width>66</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_sv_focal_length">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>583</y>
+      <width>57</width>
+      <height>14</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_cam_device_index_L">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>809</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>783</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Left</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>95</x>
+      <y>783</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Right</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_cam_device_index_R">
+    <property name="geometry">
+     <rect>
+      <x>95</x>
+      <y>809</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>760</y>
+      <width>144</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Port</string>
     </property>
    </widget>
   </widget>
